2008-05-09  Brian Merrell <bgmerrell@gmail.com>

	* src/NoteDialog.cs:  Added public CreateNewNote method to use when
	when creating new notes.
	* src/TaskWindow.cs:  Call CreateNewNote to put the user into "Edit
	Note" mode when they open notes w/ 0 current notes.  Also added an
	accessible description for the category selection combo box.

2008-04-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Logger.cs: Rename log from .banter.log to .tasque.log.

2008-04-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac: Fix typo in configure.ac. Fixes bug #525272.
	Also use PKG_PROG_PKG_CONFIG instead of AC_PATH_PROG for checking
	for pkg-config.

2008-04-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/Makefile.am:
	* src/Tasque.exe.config: Add dllmaps for libX11 and GDK.
	Fixes bug #526663.

2008-03-29  Johnny Jacob  <jjohnny@novell.com>

	* src/Backends/EDS/EDSTask.cs: Handle TaskState in 
	Constructor.

2008-03-28  Johnny Jacob  <jjohnny@novell.com>	

	* src/Backends/EDS/EDSBackends.cs : Fixed CreateTask. Moving 
	out of event model :( .
	
2008-03-28  Johnny Jacob  <jjohnny@novell.com>

	* tasque.mdp: Added EDS Backend into mdp.

2008-03-14  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Fixed a problem in the logic where the icecore backend
	  wasn't being evaluated.  The user/builder would only see this when
	  specifying only icecore as the backend.  In this case, the only thing
	  that would happen is that it would also cause RTM to be built.

2008-03-14  Boyd Timothy <btimothy@gmail.com> 

	* src/Backends/IceCore/IceTask.cs: Make the task priorities match up with
	  ICEcore so that 1=1, 2=2, 3=3, and None=5.

2008-03-14  Boyd Timothy <btimothy@gmail.com> 

	* src/Makefile.am: Build Tasque.exe before building any Backends.

2008-03-13  Boyd Timothy <btimothy@gmail.com> 

	* src/Application.cs: Do better checking when checking for types in a
	  backend dll so Tasque doesn't crash when there are problems.